--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31433,6 +31433,31 @@ select {
           animation: bounce 1s infinite;
 }
 
+.btn-danger{
+  background-color: rgb(198, 0, 42) !important;
+  border-color:  rgb(198, 0, 42) !important;
+}
+
+.bg-avans-rood{
+  background-color: rgb(198, 0, 42);
+}
+
+.avans-white{
+  color: rgb(256,256,256);
+}
+
+.avans-white:hover, .avans-white:focus{
+  color: rgb(193, 185, 185);
+}
+
+.avans-gray{
+  color: rgb(242,242,242);
+}
+
+.avans-black{
+  color: rgb(0,0,0);
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
