--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31433,29 +31433,48 @@ select {
           animation: bounce 1s infinite;
 }
 
-.btn-danger{
+.btn-danger {
   background-color: rgb(198, 0, 42) !important;
-  border-color:  rgb(198, 0, 42) !important;
+  border-color: rgb(198, 0, 42) !important;
 }
 
-.bg-avans-rood{
+.bg-avans-rood {
   background-color: rgb(198, 0, 42);
 }
 
-.avans-white{
-  color: rgb(256,256,256);
+.avans-white {
+  color: rgb(256, 256, 256);
 }
 
-.avans-white:hover, .avans-white:focus{
+.avans-white:hover,
+.avans-white:focus {
   color: rgb(193, 185, 185);
 }
 
-.avans-gray{
-  color: rgb(242,242,242);
+.avans-gray {
+  color: rgb(242, 242, 242);
 }
 
-.avans-black{
-  color: rgb(0,0,0);
+.avans-black {
+  color: rgb(0, 0, 0);
+}
+
+.form-control {
+  border: 1px solid #000;
+  border-radius: 0px;
+}
+
+.form-control:focus {
+  border: 2px solid #2563eb;
+  box-shadow: none;
+}
+
+#login_form {
+  border-radius: 0px;
+}
+
+#login_logo {
+  width: 100px;
 }
 
 @media (min-width: 640px) {
