--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,3 +25,21 @@
 .avans-black {
   color: rgb(0, 0, 0);
 }
+
+.form-control {
+  border: 1px solid #000;
+  border-radius: 0px;
+}
+
+.form-control:focus {
+  border: 2px solid #2563eb;
+  box-shadow: none;
+}
+
+#login_form {
+  border-radius: 0px;
+}
+
+#login_logo {
+  width: 100px;
+}
