code factor fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31461,7 +31461,7 @@ select {
 
 .form-control {
   border: 1px solid #000;
-  border-radius: 0px;
+  border-radius: 0;
 }
 
 .form-control:focus {
@@ -31470,7 +31470,7 @@ select {
 }
 
 #login_form {
-  border-radius: 0px;
+  border-radius: 0;
 }
 
 #login_logo {
