--- a/resources/css/avans.css
+++ b/resources/css/avans.css
@@ -80,14 +80,11 @@
   width: 100vw;
   display: flex;
   animation: fade-in 1s;
+  justify-content: space-between;
 }
 
 .avans-split div:last-child {
   text-align: right;
-}
-
-.avans-split div {
-  width: 50%;
 }
 
 .avans-red {
@@ -147,4 +144,9 @@ h2 {
 
 .avans-menu ul a .avans-flex-center {
   display: flex;
+}
+
+.avans-scrollbox {
+  height: 900px;
+  overflow-y: scroll;
 }
