--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31436,6 +31436,7 @@ select{
 
 .avans-menu-logo {
   height: 45px;
+  max-width: initial;
 }
 
 .avans-menu {
@@ -31448,6 +31449,7 @@ select{
   font-size: 1.2em;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
+  transition: font-size 0.5s;
 }
 
 .avans-menu ul {
@@ -31488,6 +31490,14 @@ select{
 }
 
 .avans-menu-user {
+  text-decoration: none;
+  color: white;
+  display: flex;
+  align-items: center;
+  padding: 0px 100px;
+}
+
+.avans-menu-logo-container {
   text-decoration: none;
   color: white;
   display: flex;
@@ -31594,6 +31604,38 @@ h2 {
 .avans-scrollbox {
   height: 900px;
   overflow-y: scroll;
+}
+
+@media only screen and (max-width: 1920px) {
+  .avans-menu-user {
+    padding: 0px 100px 0px 20px;
+  }
+
+  .avans-menu-logo-container {
+    padding: 0px 20px 0px 100px;
+  }
+
+  .avans-menu {
+    font-size: 1.1em;
+  }
+}
+
+@media only screen and (max-width: 1600px) {
+  .avans-menu-user {
+    padding: 0px 30px;
+  }
+
+  .avans-menu-logo-container {
+    padding: 0px 20px;
+  }
+
+  .avans-menu ul a {
+    padding: 25px 10px;
+  }
+
+  .avans-menu:hover ul a {
+    padding: 40px 10px;
+  }
 }
 
 /* Mail page styling */
