Replace all 0px with 0

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31434,6 +31434,10 @@ select{
           animation: bounce 1s infinite;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .avans-menu-logo {
   height: 45px;
   max-width: initial;
@@ -31454,8 +31458,8 @@ select{
 
 .avans-menu ul {
   display: flex;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -31465,7 +31469,7 @@ select{
   transform: skew(-11deg);
   flex-grow: 1;
   text-align: center;
-  margin: 0px 2px;
+  margin: 0 2px;
   color: white;
   text-decoration: none;
   transition: padding 0.5s, background-color 0.3s;
@@ -31494,7 +31498,7 @@ select{
   color: white;
   display: flex;
   align-items: center;
-  padding: 0px 100px;
+  padding: 0 100px;
 }
 
 .avans-menu-logo-container {
@@ -31502,7 +31506,7 @@ select{
   color: white;
   display: flex;
   align-items: center;
-  padding: 0px 100px;
+  padding: 0 100px;
 }
 
 .avans-split-background {
@@ -31611,11 +31615,11 @@ h2 {
 
 @media only screen and (max-width: 1920px) {
   .avans-menu-user {
-    padding: 0px 100px 0px 20px;
+    padding: 0 100px 0 20px;
   }
 
   .avans-menu-logo-container {
-    padding: 0px 20px 0px 100px;
+    padding: 0 20px 0 100px;
   }
 
   .avans-menu {
@@ -31637,11 +31641,11 @@ h2 {
 
 @media only screen and (max-width: 1600px) {
   .avans-menu-user {
-    padding: 0px 30px;
+    padding: 0 30px;
   }
 
   .avans-menu-logo-container {
-    padding: 0px 20px;
+    padding: 0 20px;
   }
 
   .avans-menu ul a {
