--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31539,7 +31539,7 @@ body {
   color: rgb(198, 0, 42);
 }
 
-h1 {
+.avans-h1 {
   font-weight: 900;
   font-size: 5em;
   text-transform: uppercase;
@@ -31547,7 +31547,7 @@ h1 {
   transition: font-size 0.5s;
 }
 
-h2 {
+.avans-h2 {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   font-size: 1.8em;
@@ -31626,11 +31626,11 @@ h2 {
     font-size: 1.1em;
   }
 
-  h1 {
+  .avans-h1 {
     font-size: 4em;
   }
 
-  h2 {
+  .avans-h2 {
     font-size: 1.5em;
   }
 
